# video_to_embedding

./: .gitignore  README.md  pyproject.toml  video_embeddings.py
